Update config and deply

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,49 @@
+# HTTP Server
+
+server {
+    listen 80;
+    server_name labourhire.org;
+    root /tmp/invalid-path-nothing-here;
+        rewrite ^/(.*)$ https://labourhire.org/$1 permanent;
+}
+
+# HTTPS Server
+
 server {
 
-	listen 80;
-	server_name localhost;
+        listen 443;
+        server_name labourhire.org;
 
-	root /var/www/;
-	index index.html index.htm index.php;
+        root /var/www/;
+        index index.html index.htm index.php;
 
-	try_files $uri /router.php;
+        ssl on;
+        ssl_certificate /home/ssl/labourhire.org.chained.crt;
+        ssl_certificate_key /home/ssl/labourhire.org.key;
 
-	location ~ \.php$ {
+        ssl_session_cache shared:SSL:20m;
+        ssl_session_timeout 4h;
+
+        ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;  # don’t use SSLv3 ref: POODLE
+        ssl_ciphers "HIGH:!aNULL:!MD5 or HIGH:!aNULL:!MD5:!3DES";
+        ssl_prefer_server_ciphers on;
+
+        ssl_session_tickets on;
+
+        ssl_stapling on;
+        ssl_stapling_verify on;
+        ssl_trusted_certificate /home/ssl/labourhire.org.chained.crt;
+        resolver 8.8.8.8 8.8.4.4 valid=300s;
+
+        if ($host = 'www.labourhire.org' ) {
+                rewrite ^/(.*)$ https://labourhire.org:443/$1 permanent;
+        }
+
+        try_files $uri /router.php;
+
+        location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-		fastcgi_pass 127.0.0.1:9000;
+                fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
         include fastcgi_params;
     }
@@ -26,10 +59,15 @@ server {
     pagespeed EnableFilters extend_cache;
     pagespeed EnableFilters remove_comments;
     pagespeed EnableFilters rewrite_javascript;
+    pagespeed MapOriginDomain "http://localhost" "https://labourhire.org";
+    pagespeed LoadFromFile "https://labourhire.org/" "/var/www/";
+    pagespeed EnableFilters in_place_optimize_for_browser;
+    pagespeed InPlaceResourceOptimization on;
 
     # Enable gzip
 
     gzip on;
+    gzip_vary on;
     gzip_types text/plain text/xml text/css application/x-javascript application/javascript;
 
 }
